@@ -4967,20 +4967,6 @@ name|CORE
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|Thread
-name|thread
-init|=
-operator|new
-name|Thread
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|void
-name|run
-parameter_list|()
-block|{
 name|String
 name|cname
 init|=
@@ -5059,14 +5045,6 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-block|}
-block|}
-decl_stmt|;
-name|thread
-operator|.
-name|start
-argument_list|()
-expr_stmt|;
 block|}
 DECL|method|handleRequestSyncAction
 specifier|protected
