@@ -70,7 +70,33 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|RejectedExecutionException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|TimeUnit
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicInteger
 import|;
 end_import
 
@@ -341,11 +367,11 @@ decl_stmt|;
 DECL|field|recoveryLock
 specifier|private
 specifier|final
-name|Object
+name|ReentrantLock
 name|recoveryLock
 init|=
 operator|new
-name|Object
+name|ReentrantLock
 argument_list|()
 decl_stmt|;
 DECL|field|recoveryThrottle
@@ -376,6 +402,16 @@ argument_list|,
 literal|5000
 argument_list|)
 decl_stmt|;
+DECL|field|recoveryWaiting
+specifier|private
+specifier|final
+name|AtomicInteger
+name|recoveryWaiting
+init|=
+operator|new
+name|AtomicInteger
+argument_list|()
+decl_stmt|;
 comment|// Use the readLock to retrieve the current IndexWriter (may be lazily opened)
 comment|// Use the writeLock for changing index writers
 DECL|field|iwLock
@@ -400,19 +436,15 @@ specifier|private
 name|DirectoryFactory
 name|directoryFactory
 decl_stmt|;
-DECL|field|recoveryRunning
-specifier|private
-specifier|volatile
-name|boolean
-name|recoveryRunning
-decl_stmt|;
 DECL|field|recoveryStrat
 specifier|private
+specifier|volatile
 name|RecoveryStrategy
 name|recoveryStrat
 decl_stmt|;
 DECL|field|future
 specifier|private
+specifier|volatile
 name|Future
 name|future
 decl_stmt|;
@@ -1205,6 +1237,20 @@ name|CoreDescriptor
 name|cd
 parameter_list|)
 block|{
+name|Thread
+name|thread
+init|=
+operator|new
+name|Thread
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
 name|MDCLoggingContext
 operator|.
 name|setCoreDescriptor
@@ -1246,11 +1292,66 @@ argument_list|)
 expr_stmt|;
 return|return;
 block|}
-synchronized|synchronized
-init|(
+comment|// if we can't get the lock, another recovery is running
+comment|// we check to see if there is already one waiting to go
+comment|// after the current one, and if there is, bail
+name|boolean
+name|locked
+init|=
 name|recoveryLock
-init|)
+operator|.
+name|tryLock
+argument_list|()
+decl_stmt|;
+try|try
 block|{
+if|if
+condition|(
+operator|!
+name|locked
+condition|)
+block|{
+if|if
+condition|(
+name|recoveryWaiting
+operator|.
+name|get
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
+return|return;
+block|}
+name|recoveryWaiting
+operator|.
+name|incrementAndGet
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|recoveryWaiting
+operator|.
+name|incrementAndGet
+argument_list|()
+expr_stmt|;
+name|cancelRecovery
+argument_list|()
+expr_stmt|;
+block|}
+name|recoveryLock
+operator|.
+name|lock
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|recoveryWaiting
+operator|.
+name|decrementAndGet
+argument_list|()
+expr_stmt|;
 comment|// to be air tight we must also check after lock
 if|if
 condition|(
@@ -1273,57 +1374,9 @@ name|log
 operator|.
 name|info
 argument_list|(
-literal|"Running recovery - first canceling any ongoing recovery"
+literal|"Running recovery"
 argument_list|)
 expr_stmt|;
-name|cancelRecovery
-argument_list|()
-expr_stmt|;
-while|while
-condition|(
-name|recoveryRunning
-condition|)
-block|{
-try|try
-block|{
-name|recoveryLock
-operator|.
-name|wait
-argument_list|(
-literal|1000
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|e
-parameter_list|)
-block|{                      }
-comment|// check again for those that were waiting
-if|if
-condition|(
-name|cc
-operator|.
-name|isShutDown
-argument_list|()
-condition|)
-block|{
-name|log
-operator|.
-name|warn
-argument_list|(
-literal|"Skipping recovery because Solr is shutdown"
-argument_list|)
-expr_stmt|;
-return|return;
-block|}
-if|if
-condition|(
-name|closed
-condition|)
-return|return;
-block|}
 name|recoveryThrottle
 operator|.
 name|minimumWaitBetweenActions
@@ -1343,6 +1396,8 @@ name|cc
 argument_list|,
 name|cd
 argument_list|,
+name|DefaultSolrCoreState
+operator|.
 name|this
 argument_list|)
 expr_stmt|;
@@ -1360,7 +1415,7 @@ operator|.
 name|getUpdateShardHandler
 argument_list|()
 operator|.
-name|getUpdateExecutor
+name|getRecoveryExecutor
 argument_list|()
 operator|.
 name|submit
@@ -1368,53 +1423,6 @@ argument_list|(
 name|recoveryStrat
 argument_list|)
 expr_stmt|;
-name|recoveryRunning
-operator|=
-literal|true
-expr_stmt|;
-block|}
-block|}
-finally|finally
-block|{
-name|MDCLoggingContext
-operator|.
-name|clear
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-annotation|@
-name|Override
-DECL|method|cancelRecovery
-specifier|public
-name|void
-name|cancelRecovery
-parameter_list|()
-block|{
-synchronized|synchronized
-init|(
-name|recoveryLock
-init|)
-block|{
-if|if
-condition|(
-name|recoveryStrat
-operator|!=
-literal|null
-operator|&&
-name|recoveryRunning
-condition|)
-block|{
-name|recoveryStrat
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-while|while
-condition|(
-literal|true
-condition|)
-block|{
 try|try
 block|{
 name|future
@@ -1429,8 +1437,25 @@ name|InterruptedException
 name|e
 parameter_list|)
 block|{
-comment|// not interruptible - keep waiting
-continue|continue;
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|e
+argument_list|)
+throw|;
 block|}
 catch|catch
 parameter_list|(
@@ -1438,19 +1463,116 @@ name|ExecutionException
 name|e
 parameter_list|)
 block|{
-break|break;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|e
+argument_list|)
+throw|;
 block|}
-break|break;
 block|}
-name|recoveryRunning
-operator|=
-literal|false
-expr_stmt|;
+finally|finally
+block|{
 name|recoveryLock
 operator|.
-name|notifyAll
+name|unlock
 argument_list|()
 expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|locked
+condition|)
+name|recoveryLock
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+name|MDCLoggingContext
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+decl_stmt|;
+try|try
+block|{
+comment|// we make recovery requests async - that async request may
+comment|// have to 'wait in line' a bit or bail if a recovery is
+comment|// already queued up - the recovery execution itself is run
+comment|// in another thread on another 'recovery' executor.
+comment|// The update executor is interrupted on shutdown and should
+comment|// not do disk IO.
+comment|// The recovery executor is not interrupted on shutdown.
+comment|//
+comment|// avoid deadlock: we can't use the recovery executor here
+name|cc
+operator|.
+name|getUpdateShardHandler
+argument_list|()
+operator|.
+name|getUpdateExecutor
+argument_list|()
+operator|.
+name|submit
+argument_list|(
+name|thread
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|RejectedExecutionException
+name|e
+parameter_list|)
+block|{
+comment|// fine, we are shutting down
+block|}
+block|}
+annotation|@
+name|Override
+DECL|method|cancelRecovery
+specifier|public
+name|void
+name|cancelRecovery
+parameter_list|()
+block|{
+if|if
+condition|(
+name|recoveryStrat
+operator|!=
+literal|null
+condition|)
+block|{
+try|try
+block|{
+name|recoveryStrat
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|e
+parameter_list|)
+block|{
+comment|// okay
 block|}
 block|}
 block|}
@@ -1468,10 +1590,6 @@ operator|=
 literal|false
 expr_stmt|;
 comment|// once we have successfully recovered, we no longer need to act as if we are recovering after startup
-name|recoveryRunning
-operator|=
-literal|false
-expr_stmt|;
 block|}
 comment|/** called from recoveryStrat on a failed recovery */
 annotation|@
@@ -1481,12 +1599,7 @@ specifier|public
 name|void
 name|failed
 parameter_list|()
-block|{
-name|recoveryRunning
-operator|=
-literal|false
-expr_stmt|;
-block|}
+block|{}
 annotation|@
 name|Override
 DECL|method|close
