@@ -152,6 +152,20 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|cloud
+operator|.
+name|RecoveryStrategy
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|common
 operator|.
 name|SolrException
@@ -280,18 +294,6 @@ name|ExecutorService
 import|;
 end_import
 
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|Executors
-import|;
-end_import
-
 begin_class
 DECL|class|UpdateShardHandler
 specifier|public
@@ -332,6 +334,22 @@ operator|new
 name|SolrjNamedThreadFactory
 argument_list|(
 literal|"updateExecutor"
+argument_list|)
+argument_list|)
+decl_stmt|;
+DECL|field|recoveryExecutor
+specifier|private
+name|ExecutorService
+name|recoveryExecutor
+init|=
+name|ExecutorUtil
+operator|.
+name|newMDCAwareCachedThreadPool
+argument_list|(
+operator|new
+name|SolrjNamedThreadFactory
+argument_list|(
+literal|"recoveryExecutor"
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -570,6 +588,7 @@ return|return
 name|clientConnectionManager
 return|;
 block|}
+comment|/**    * This method returns an executor that is not meant for disk IO and that will    * be interrupted on shutdown.    *     * @return an executor for update related activities that do not do disk IO.    */
 DECL|method|getUpdateExecutor
 specifier|public
 name|ExecutorService
@@ -580,6 +599,17 @@ return|return
 name|updateExecutor
 return|;
 block|}
+comment|/**    * In general, RecoveryStrategy threads do not do disk IO, but they open and close SolrCores    * in async threads, amoung other things, and can trigger disk IO, so we use this alternate     * executor rather than the 'updateExecutor', which is interrupted on shutdown.    *     * @return executor for {@link RecoveryStrategy} thread which will not be interrupted on close.    */
+DECL|method|getRecoveryExecutor
+specifier|public
+name|ExecutorService
+name|getRecoveryExecutor
+parameter_list|()
+block|{
+return|return
+name|recoveryExecutor
+return|;
+block|}
 DECL|method|close
 specifier|public
 name|void
@@ -588,11 +618,19 @@ parameter_list|()
 block|{
 try|try
 block|{
+comment|// we interrupt on purpose here, but this exectuor should not run threads that do disk IO!
 name|ExecutorUtil
 operator|.
 name|shutdownWithInterruptAndAwaitTermination
 argument_list|(
 name|updateExecutor
+argument_list|)
+expr_stmt|;
+name|ExecutorUtil
+operator|.
+name|shutdownAndAwaitTermination
+argument_list|(
+name|recoveryExecutor
 argument_list|)
 expr_stmt|;
 block|}
